--- a/.github/workflows/python37.yaml
+++ b/.github/workflows/python37.yaml
@@ -27,6 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest mypy
+        pip install pytorch-functional
     - name: Lint with flake8
       run: |
         flake8 .
