--- a/.github/workflows/python39.yaml
+++ b/.github/workflows/python39.yaml
@@ -34,6 +34,6 @@ jobs:
 #    - name: Lint with mypy
 #      run: |
 #        mypy .
-#    - name: Test with pytest
-#      run: |
-#        pytest .
+    - name: Test with pytest
+      run: |
+        pytest .
