--- a/.github/workflows/python39.yaml
+++ b/.github/workflows/python39.yaml
@@ -28,9 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest mypy
         pip install pytorch-functional
-    - name: Lint with flake8
-      run: |
-        flake8 .
+#    - name: Lint with flake8
+#      run: |
+#        flake8 .
 #    - name: Lint with mypy
 #      run: |
 #        mypy .
