--- a/.github/workflows/python39.yaml
+++ b/.github/workflows/python39.yaml
@@ -5,7 +5,7 @@ name: Python 3.9
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "pytest" ]
   pull_request:
     branches: [ "main" ]
 
