--- a/.github/workflows/python37.yaml
+++ b/.github/workflows/python37.yaml
@@ -31,9 +31,9 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 .
-#    - name: Lint with mypy
-#      run: |
-#        mypy .
+    - name: Lint with mypy
+      run: |
+        mypy .
     - name: Test with pytest
       run: |
         pytest .
