--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,13 @@ plugins:
             python:
                 options:
                     docstring_style: numpy
+                    
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfence
 
 theme:
     name: material
