--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,7 +33,7 @@ markdown_extensions:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
-  - pymdownx.superfence
+  - pymdownx.superfences
 
 theme:
     name: material
