Add develop branch

--- a/.github/workflows/python310.yaml
+++ b/.github/workflows/python310.yaml
@@ -5,9 +5,9 @@ name: Python 3.10
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "develop" ]
 
 permissions:
   contents: read
