--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ repo_url: https://github.com/gahaalt/pytorch-functional
 nav:
     - README: README.md
     - quick_start.md
+    - acceleration.md
     - api.md
 
 copyright:
