--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
     - quick_start.md
     - acceleration.md
     - Reference:
+        - Reference/input.md
         - Reference/model.md
         - Reference/placeholder.md
         - Reference/tools.md
