--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
         - Reference/input.md
         - Reference/model_tools.md
         - Reference/symbolic_tensor.md
+        - Reference/useful_layers.md
 
 copyright:
     Copyright @ 2022 Szymon Mikler
