--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,4 +62,8 @@ theme:
             toggle:
                 icon: material/weather-sunny
                 name: Switch to light mode
- 
+
+extra_javascript:
+# Read the Docs requires JQuery for its JavaScript code to inject the flyout menu.
+# Material for MkDocs does not come with JQuery.
+- 'https://code.jquery.com/jquery-3.6.1.min.js'
