Add test that downloads from pip

--- a/.github/workflows/python-3.7-pip.yaml
+++ b/.github/workflows/python-3.7-pip.yaml
@@ -29,8 +29,8 @@ jobs:
                     pip install flake8 pytest mypy
                     pip install networkx matplotlib scipy
                     
-                    ls
-                    pip install pytorch-functional
+                    rm -r pytorch_symbolic
+                    pip install pytorch-symbolic
             -   name: Lint with mypy
                 run: |
                     mypy .
