--- a/.github/workflows/python-3.10-pip.yaml
+++ b/.github/workflows/python-3.10-pip.yaml
@@ -27,14 +27,9 @@ jobs:
                 run: |
                     python -m pip install --upgrade pip
                     pip install flake8 pytest mypy==0.982
-                    pip install torch numpy
                     pip install networkx matplotlib scipy
-            -   name: Lint with flake8
-                run: |
-                    flake8 .
-            -   name: Lint with mypy
-                run: |
-                    mypy .
+                    rm -r pytorch_symbolic
+                    pip install pytorch-symbolic
             -   name: Test with pytest
                 run: |
                     pytest . --log-cli-level=WARNING
