--- a/.github/workflows/python-3.7-pip.yaml
+++ b/.github/workflows/python-3.7-pip.yaml
@@ -26,11 +26,10 @@ jobs:
             -   name: Install dependencies
                 run: |
                     python -m pip install --upgrade pip
-                    pip install flake8 pytest mypy
+                    pip install flake8 pytest mypy==0.982
                     pip install networkx matplotlib scipy
-                    
                     rm -r pytorch_symbolic
                     pip install pytorch-symbolic
-            -   name: Lint with mypy
+            -   name: Test with pytest
                 run: |
-                    mypy .
+                    pytest . --log-cli-level=WARNING
