--- a/.github/workflows/python-3.8-pip.yaml
+++ b/.github/workflows/python-3.8-pip.yaml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python 3.10
+name: Python 3.8
 
 on:
     push:
@@ -19,22 +19,17 @@ jobs:
 
         steps:
             -   uses: actions/checkout@v3
-            -   name: Set up Python 3.10
+            -   name: Set up Python 3.8
                 uses: actions/setup-python@v3
                 with:
-                    python-version: "3.10"
+                    python-version: "3.8"
             -   name: Install dependencies
                 run: |
                     python -m pip install --upgrade pip
                     pip install flake8 pytest mypy==0.982
-                    pip install torch numpy
                     pip install networkx matplotlib scipy
-            -   name: Lint with flake8
-                run: |
-                    flake8 .
-            -   name: Lint with mypy
-                run: |
-                    mypy .
+                    rm -r pytorch_symbolic
+                    pip install pytorch-symbolic
             -   name: Test with pytest
                 run: |
                     pytest . --log-cli-level=WARNING
