--- a/.github/workflows/python-3.8.yaml
+++ b/.github/workflows/python-3.8.yaml
@@ -26,7 +26,7 @@ jobs:
             -   name: Install dependencies
                 run: |
                     python -m pip install --upgrade pip
-                    pip install flake8 pytest mypy
+                    pip install flake8 pytest mypy==0.982
                     pip install torch numpy
                     pip install networkx matplotlib scipy
             -   name: Lint with flake8
