--- a/.github/workflows/python-3.10-pip.yaml
+++ b/.github/workflows/python-3.10-pip.yaml
@@ -30,6 +30,12 @@ jobs:
                     pip install networkx matplotlib scipy
                     rm -r pytorch_symbolic
                     pip install pytorch-symbolic
+            -   name: Lint with flake8
+                run: |
+                    flake8 .
+            -   name: Lint with mypy
+                run: |
+                    mypy .
             -   name: Test with pytest
                 run: |
                     pytest . --log-cli-level=WARNING
