--- a/.github/workflows/python-code-quality.yaml
+++ b/.github/workflows/python-code-quality.yaml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python 3.8 from pip
+name: Python Code Quality
 
 on:
     push:
@@ -16,20 +16,23 @@ jobs:
     build:
 
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11" ]
 
         steps:
             -   uses: actions/checkout@v3
-            -   name: Set up Python 3.8
+            -   name: Set up Python ${{ matrix.python-version }}
                 uses: actions/setup-python@v3
                 with:
-                    python-version: "3.8"
+                    python-version: ${{ matrix.python-version }}
             -   name: Install dependencies
                 run: |
                     python -m pip install --upgrade pip
-                    pip install flake8 pytest mypy==0.982
+                    pip install flake8 pytest mypy
                     pip install networkx matplotlib scipy
-                    rm -r pytorch_symbolic
-                    pip install pytorch-symbolic
+                    pip install torch numpy
+
             -   name: Lint with flake8
                 run: |
                     flake8 .
