--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ pythonpath = ["."]
 
 [tool.mypy]
 ignore_missing_imports = true
-exclude = "devel"
+exclude = ["devel", "benchmarks"]
 
 [tool.isort]
 profile = "black"
