--- a/.github/workflows/python-code-quality-pip.yaml
+++ b/.github/workflows/python-code-quality-pip.yaml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python Code Quality from pip
+name: check code quality (pip)
 
 on:
     push:
@@ -15,7 +15,7 @@ permissions:
 jobs:
     build:
 
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04
         strategy:
             matrix:
                 python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11" ]
