--- a/.github/workflows/run-notebook.yaml
+++ b/.github/workflows/run-notebook.yaml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Notebook
+name: Run notebook
 
 on:
     push:
@@ -15,7 +15,7 @@ permissions:
 jobs:
     build:
 
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04
 
         steps:
             -   uses: actions/checkout@v3
