--- a/.github/workflows/run-notebook.yaml
+++ b/.github/workflows/run-notebook.yaml
@@ -16,13 +16,16 @@ jobs:
     build:
 
         runs-on: ubuntu-22.04
+        strategy:
+            matrix:
+                python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
         steps:
             -   uses: actions/checkout@v3
-            -   name: Set up Python 3.7
+            -   name: Set up Python ${{ matrix.python-version }}
                 uses: actions/setup-python@v3
                 with:
-                    python-version: "3.7"
+                    python-version: ${{ matrix.python-version }}
             -   name: Install dependencies
                 run: |
                     python -m pip install --upgrade pip
