--- a/.github/workflows/run-notebook.yaml
+++ b/.github/workflows/run-notebook.yaml
@@ -4,35 +4,35 @@
 name: Run notebook
 
 on:
-    push:
-        branches: ["main"]
-    pull_request:
-        branches: ["main"]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
-    contents: read
+  contents: read
 
 jobs:
-    build:
+  build:
 
-        runs-on: ubuntu-22.04
-        strategy:
-            matrix:
-                python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        python-version: [ "3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13" ]
 
-        steps:
-            -   uses: actions/checkout@v3
-            -   name: Set up Python ${{ matrix.python-version }}
-                uses: actions/setup-python@v3
-                with:
-                    python-version: ${{ matrix.python-version }}
-            -   name: Install dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install torch numpy jupyter
-            -   name: Convert notebook to python
-                run: |
-                    jupyter nbconvert introduction.ipynb --to python
-            -   name: Run script
-                run: |
-                    ipython gentle-introduction.py
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install torch numpy jupyter
+      - name: Convert notebook to python
+        run: |
+          jupyter nbconvert introduction.ipynb --to python
+      - name: Run script
+        run: |
+          ipython introduction.py
