--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,45 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
+name = "pytorch-symbolic"
+dynamic = ["version"]
+description = "Symbolic API for model creation in PyTorch."
+dependencies = ["torch"]
+license = { text = "MIT" }
+requires-python = ">=3.7"
+authors = [
+    { name = "Szymon Mikler", email = "sjmikler@gmail.com" }
+]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+]
+readme = "README.md"
+
+[project.urls]
+Home = "https://github.com/gahaalt/pytorch-symbolic"
+Documentation = "https://github.com/sjmikler/pytorch-symbolic/blob/main/docs"
+
+[tool.hatch.version]
+path = "progress_table/__init__.py"
+
+[tool.hatch.build.targets.sdist]
+include = ["pytorch_symbolic", "examples", "docs", "README.md"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["progress_table"]
+
+# %%
+
 [tool.pytest.ini_options]
 pythonpath = ["."]
 
@@ -7,7 +49,7 @@ exclude = ["devel", "benchmarks"]
 
 [tool.isort]
 profile = "black"
-line_length = 110
+line_length = 120
 
 [tool.black]
-line_length = 110
+line_length = 120
