--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 readme = "README.md"
 
 [project.optional-dependencies]
-dev = ["hatch", "twine", "pytest", "isort", "black", "mypy"]
+dev = ["ruff", "pyright", "pytest", "pytest-cov", "hatch", "twine"]
 full = ["networkx", "matplotlib", "scipy"]
 
 [project.urls]
@@ -44,12 +44,25 @@ packages = ["pytorch_symbolic"]
 
 # %%
 
+[tool.pyright]
+typeCheckingMode = "standard"
+exclude = ["devel", "build", "dist"]
+
+[tool.ruff]
+line-length = 120
+target-version = "py37"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B"]
+
+# %%
+
 [tool.pytest.ini_options]
 pythonpath = ["."]
 
 [tool.mypy]
 ignore_missing_imports = true
-exclude = ["devel", "benchmarks"]
+exclude = ["devel", "build", "dist"]
 
 [tool.isort]
 profile = "black"
